--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.9"
   }
 }
